[metadata]
name = pynetsnmp
version = file: VERSION
maintainer = Zenoss
maintainer_email = support@zenoss.com
url = http://www.zenoss.com/
description = Wraps Net-SNMP behind a Python API
long_description = file: README.md
license = GPLv2
license_files = COPYRIGHT.txt, LICENSE.txt
python_requires = >=2.7
keywords =  zenoss, pynetsnmp, snmp, net-snmp

[options]
zip_safe = False
packages = find:
install_requires = 
	six
	ipaddress; python_version<"3.3"

[bdist_wheel]
universal = 1
